--- a/index.html
+++ b/index.html
@@ -15,23 +15,38 @@
                 <div class="content">
                     <nav class="navbar">
                         <!-- Logo -->
-                         <img src="./assets/img/logo.svg" alt="Besnik."/>
+                        <img src="./assets/img/logo.svg" alt="Besnik." />
 
                         <!-- Navigation -->
-                            <ul>
-                                <li><a href="#!">Home</a></li>
-                                <li><a href="#!">Features</a></li>
-                                <li><a href="#!">Services</a></li>
-                                <li><a href="#!">Resources</a></li>
-                                <li><a href="#!">Contact</a></li>
-                            </ul>
+                        <ul>
+                            <li><a href="#!">Home</a></li>
+                            <li><a href="#!">Features</a></li>
+                            <li><a href="#!">Services</a></li>
+                            <li><a href="#!">Resources</a></li>
+                            <li><a href="#!">Contact</a></li>
+                        </ul>
 
                         <!-- Action -->
-                         <div class="actions">
+                        <div class="actions">
                             <a href="#!" class="action-link">Sign in</a>
                             <a href="#!" class="btn action-btn">Sign up</a>
-                         </div>
+                        </div>
                     </nav>
+
+                    <div class="hero">
+                        <div class="info">
+                            <p class="sub-title"> Welcome to Besnik Agency</p>
+                            <h1 class="title">
+                                Discover a place you'll love to live.
+                            </h1>
+                            <p class="desc">
+                                get the best real estate deals first, before
+                                they hit the mass market! HOT FORECLOSURE DEALS
+                                with one simple search.
+                            </p>
+                            <a href="#!" class="btn">More About Us</a>
+                        </div>
+                    </div>
                 </div>
             </header>
         </main>
