--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
                                 Discover a place you'll love to live.
                             </h1>
                             <p class="desc">
-                                get the best real estate deals first, before
+                                Get the best real estate deals first, before
                                 they hit the mass market! HOT FORECLOSURE DEALS
                                 with one simple search.
                             </p>
-                            <a href="#!" class="btn">More About Us</a>
+                            <!-- Call to action -->
+                            <a href="#!" class="btn hero-cta">More About Us</a>
                         </div>
                     </div>
                 </div>
