--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                     <div class="hero">
                         <div class="info">
-                            <p class="sub-title"> Welcome to Besnik Agency</p>
+                            <p class="sub-title">Welcome to Besnik Agency</p>
                             <h1 class="title">
                                 Discover a place you'll love to live.
                             </h1>
@@ -47,6 +47,12 @@
                             <!-- Call to action -->
                             <a href="#!" class="btn hero-cta">More About Us</a>
                         </div>
+
+                        <img
+                            src="./assets/img/hero.svg"
+                            alt="Discover a place you'll love to live."
+                            class="hero-img"
+                        />
                     </div>
                 </div>
             </header>
