--- a/index.html
+++ b/index.html
@@ -74,16 +74,29 @@
                         </div>
                     </div>
                     <div class="row row-desc">
-                        <p class ="desc"> More than 45,000+ companies trust besnik </p>
-                        <p class ="desc">5 Star Ratings (2k+ Review)</p>
-                    </div>  
-                    <div class="images">
-                        <img src="./assets/img/client1.svg" alt="Client 1">
-                        <img src="./assets/img/client2.svg" alt="Client 2">
-                        <img src="./assets/img/client3.svg" alt="Client 3">
-                        <img src="./assets/img/client4.svg" alt="Client 4">
-                        <img src="./assets/img/client5.svg" alt="Client 5">
+                        <p class="desc">
+                            More than 45,000+ companies trust besnik
+                        </p>
+                        <p class="desc">5 Star Ratings (2k+ Review)</p>
                     </div>
+                    <div class="images">
+                        <img src="./assets/img/client1.svg" alt="Client 1" />
+                        <img src="./assets/img/client2.svg" alt="Client 2" />
+                        <img src="./assets/img/client3.svg" alt="Client 3" />
+                        <img src="./assets/img/client4.svg" alt="Client 4" />
+                        <img src="./assets/img/client5.svg" alt="Client 5" />
+                    </div>
+                </div>
+            </div>
+
+            <!-- Guides -->
+            <div class="guides">
+                <div class="content">
+                    <h2 class="sub-title">How its works?</h2>
+                    <p class="desc">
+                        Everything you need to know when you're looking to buy,
+                        rent, or sell - all in one place.
+                    </p>
                 </div>
             </div>
         </main>
