--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         rent, or sell - all in one place.
                     </p>
 
-                    <!-- List guide -->guide
+                    <!-- List guide -->
                     <ul class="list-guide">
                         <li class="guide-item">
                             <img
@@ -151,6 +151,10 @@
                             </a>
                         </li>
                     </ul>
+
+                    <div class="guide-cta">
+                        <a href="#!" class="btn">See Full Guidelines</a>
+                    </div>
                 </div>
             </div>
         </main>
