--- a/index.html
+++ b/index.html
@@ -157,6 +157,27 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Featured -->
+             <div class="features">
+                <div class="featured_properties">
+                    <div class="title">Featured Properties</div>
+
+                    <div class="sub-titlebox">
+                    <div class="sub-title">Everything you need to know when you're looking</div>
+                    <a href="#!" class="link">
+                        <span class = "text">View All Properties</span>
+                        <img
+                            src="./assets/img/arrow-right.svg"
+                            alt="Arrow righr"
+                            class="arrow"
+                        />
+                    </a>
+                </div>
+                </div>
+                <div class="featuresimage"></div>
+             </div>
+
         </main>
     </body>
 </html>
