--- a/index.html
+++ b/index.html
@@ -159,25 +159,58 @@
             </div>
 
             <!-- Featured -->
-             <div class="features">
+            <div class="features">
                 <div class="featured_properties">
                     <div class="title">Featured Properties</div>
 
                     <div class="sub-titlebox">
-                    <div class="sub-title">Everything you need to know when you're looking</div>
-                    <a href="#!" class="link">
-                        <span class = "text">View All Properties</span>
-                        <img
-                            src="./assets/img/arrow-right.svg"
-                            alt="Arrow righr"
-                            class="arrow"
-                        />
-                    </a>
-                </div>
-                </div>
-                <div class="featuresimage"></div>
-             </div>
+                        <div class="sub-title">
+                            Everything you need to know when you're looking
+                        </div>
+                        <a href="#!" class="link">
+                            <span class="text">View All Properties</span>
+                            <img
+                                src="./assets/img/arrow-right.svg"
+                                alt="Arrow righr"
+                                class="arrow"
+                            />
+                        </a>
 
+                        <div class="featuresimage">
+                            <ul class="listfeature">
+                                <li class="nikko">
+                                    <img
+                                        src="./assets/img/feature_nikko.png"
+                                        alt=""
+                                        class="apa"
+                                    />
+                                    <div class="text1">Nikko Apartments</div>
+                                    <div class="text2">
+                                        8502 Preston Rd. Inglewood, Maine 98280
+                                    </div>
+                                    <div class="symbol">
+                                            <img
+                                                src="./assets/img/symbol_bed.svg"
+                                                alt=""
+                                            />
+                                            <div class="text">5 Beds</div>
+                                            <img
+                                                src="./assets/img/symbol_cake.svg"
+                                                alt=""
+                                            />
+                                            <div class="text">2 both</div>
+                                            <img
+                                                src="./assets/img/symbol_m.svg"
+                                                alt=""
+                                            />
+                                            <div class="text">2000 Sqft</div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
     </body>
 </html>
