--- a/index.html
+++ b/index.html
@@ -175,40 +175,78 @@
                                 class="arrow"
                             />
                         </a>
-
-                        <div class="featuresimage">
-                            <ul class="listfeature">
-                                <li class="nikko">
-                                    <img
-                                        src="./assets/img/feature_nikko.png"
-                                        alt=""
-                                        class="apa"
-                                    />
-                                    <div class="text1">Nikko Apartments</div>
-                                    <div class="text2">
-                                        8502 Preston Rd. Inglewood, Maine 98280
-                                    </div>
-                                    <div class="symbol">
-                                            <img
-                                                src="./assets/img/symbol_bed.svg"
-                                                alt=""
-                                            />
-                                            <div class="text">5 Beds</div>
-                                            <img
-                                                src="./assets/img/symbol_cake.svg"
-                                                alt=""
-                                            />
-                                            <div class="text">2 both</div>
-                                            <img
-                                                src="./assets/img/symbol_m.svg"
-                                                alt=""
-                                            />
-                                            <div class="text">2000 Sqft</div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
                     </div>
+                </div>
+
+                <div class="featuresimage">
+                    <ul class="listfeature">
+                        <li class="nikko">
+                            <img
+                                src="./assets/img/feature_nikko.png"
+                                alt=""
+                                class="apa"
+                            />
+                            <div class="text1">Nikko Apartments</div>
+                            <div class="text2">
+                                8502 Preston Rd. Inglewood, Maine 98280
+                            </div>
+                            <div class="symbol">
+                                <img src="./assets/img/symbol_bed.svg" alt="" />
+                                <div class="text">5 Beds</div>
+                                <img
+                                    src="./assets/img/symbol_cake.svg"
+                                    alt=""
+                                />
+                                <div class="text">2 both</div>
+                                <img src="./assets/img/symbol_m.svg" alt="" />
+                                <div class="text">2000 Sqft</div>
+                            </div>
+                        </li>
+                        <li class="nikko">
+                            <img
+                                src="./assets/img/feature_coco.png"
+                                alt=""
+                                class="apa"
+                            />
+                            <div class="text1">Nikko Apartments</div>
+                            <div class="text2">
+                                8502 Preston Rd. Inglewood, Maine 98280
+                            </div>
+                            <div class="symbol">
+                                <img src="./assets/img/symbol_bed.svg" alt="" />
+                                <div class="text">5 Beds</div>
+                                <img
+                                    src="./assets/img/symbol_cake.svg"
+                                    alt=""
+                                />
+                                <div class="text">2 both</div>
+                                <img src="./assets/img/symbol_m.svg" alt="" />
+                                <div class="text">2000 Sqft</div>
+                            </div>
+                        </li>
+                        <li class="nikko">
+                            <img
+                                src="./assets/img/feature_lavis18.png"
+                                alt=""
+                                class="apa"
+                            />
+                            <div class="text1">Nikko Apartments</div>
+                            <div class="text2">
+                                8502 Preston Rd. Inglewood, Maine 98280
+                            </div>
+                            <div class="symbol">
+                                <img src="./assets/img/symbol_bed.svg" alt="" />
+                                <div class="text">5 Beds</div>
+                                <img
+                                    src="./assets/img/symbol_cake.svg"
+                                    alt=""
+                                />
+                                <div class="text">2 both</div>
+                                <img src="./assets/img/symbol_m.svg" alt="" />
+                                <div class="text">2000 Sqft</div>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </main>
