--- a/index.html
+++ b/index.html
@@ -249,6 +249,36 @@
                     </ul>
                 </div>
             </div>
+
+            <!-- Neighbourhood -->
+            <div class="neighborhood">
+                <div class="house">
+                    <div class="text">
+                        You’ve found a neighborhood you love.
+                    </div>
+                    <div class="text">
+                        When you own a home, you’re committing to living in one
+                        location for a while. In a recent Trulia survey, we
+                        found that five out of six respondents said finding the
+                        right neighborhood
+                    </div>
+                </div>
+
+                <ul class="number">
+                    <li>
+                        <div class="text1">2,500</div>
+                        <div class="text2">Homes For Sale</div>
+                    </li>
+                    <li>
+                        <div class="text1">5,000+</div>
+                        <div class="text2">Homes Recently Sold</div>
+                    </li>
+                    <li>
+                        <div class="text1">170+</div>
+                        <div class="text2">Price Reduced</div>
+                    </li>
+                </ul>
+            </div>
         </main>
     </body>
 </html>
