--- a/index.html
+++ b/index.html
@@ -252,6 +252,11 @@
 
             <!-- Neighbourhood -->
             <div class="neighborhood">
+                <div class="avarage">
+                </div class="a">40,000+</div>
+            </div class="b">By avarage for 2 bedroom apments in San Francisco, CA</div>
+            <img src="./assets/img/users.png" alt="" class="users">
+                </div>
                 <div class="house">
                     <div class="text">
                         You’ve found a neighborhood you love.
