--- a/index.html
+++ b/index.html
@@ -258,10 +258,10 @@
             <img src="./assets/img/users.png" alt="" class="users">
                 </div>
                 <div class="house">
-                    <div class="text">
+                    <div class="text1">
                         You’ve found a neighborhood you love.
                     </div>
-                    <div class="text">
+                    <div class="text2">
                         When you own a home, you’re committing to living in one
                         location for a while. In a recent Trulia survey, we
                         found that five out of six respondents said finding the
