--- a/index.html
+++ b/index.html
@@ -373,6 +373,19 @@
                         <div class="text1">170+</div>
                         <div class="text2">Price Reduced</div>
                     </li>
+                    ul class="number">
+                    <li>
+                        <div class="text1">2,500</div>
+                        <div class="text2">Homes For Sale</div>
+                    </li>
+                    <li>
+                        <div class="text1">5,000+</div>
+                        <div class="text2">Homes Recently Sold</div>
+                    </li>
+                    <li>
+                        <div class="text1">170+</div>
+                        <div class="text2">Price Reduced</div>
+                    </li>
                 </ul>
             </div>
         </main>
