--- a/index.html
+++ b/index.html
@@ -177,7 +177,66 @@
                             </a>
                         </div>
                     </header>
-                    
+                </div>
+
+                <div class="list">
+                    <!-- Featured item 1 -->
+                    <div class="item">
+                        <img src="./assets/img/feature1.jpg" alt="Nikko Apartments" class="thumb" />
+                        <div class="body">
+                            <h3 class="title">Nikko Apartments</h3>
+                            <p class="desc">8502 Preston Rd. Inglewood, Maine 98280</p>
+                            <div class="info">
+                                <img src="./assets/img/symbol_bed.svg" alt="" class="icon" />
+                                <span class="label">5 Beds</span>
+
+                                <img src="./assets/img/symbol_cake.svg" alt="" class="icon" />
+                                <span class="label">2 Both</span>
+
+                                <img src="./assets/img/symbol_m.svg" alt="" class="icon" />
+                                <span class="label">2000 Sqft</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Featured item 2-->
+                    <div class="item">
+                        <img src="./assets/img/feature2.jpg" alt="CouCou Homestead" class="thumb" />
+                        <div class="body">
+                            <h3 class="title">CouCou Homestead</h3>
+                            <p class="desc">8502 Preston Rd. Inglewood, Maine 98280</p>
+                            <div class="info">
+                                <img src="./assets/img/symbol_bed.svg" alt="" class="icon" />
+                                <span class="label">5 Beds</span>
+
+                                <img src="./assets/img/symbol_cake.svg" alt="" class="icon" />
+                                <span class="label">2 Both</span>
+
+                                <img src="./assets/img/symbol_m.svg" alt="" class="icon" />
+                                <span class="label">2000 Sqft</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Featured item 3 -->
+                    <div class="item">
+                        <img src="./assets/img/feature3.jpg" alt="Lavis 18 Residence" class="thumb" />
+                        <div class="body">
+                            <h3 class="title">Lavis 18 Residence<h3>
+                            <p class="desc">8502 Preston Rd. Inglewood, Maine 98280</p>
+                            <div class="info">
+                                <img src="./assets/img/symbol_bed.svg" alt="" class="icon" />
+                                <span class="label">5 Beds</span>
+
+                                <img src="./assets/img/symbol_cake.svg" alt="" class="icon" />
+                                <span class="label">2 Both</span>
+
+                                <img src="./assets/img/symbol_m.svg" alt="" class="icon" />
+                                <span class="label">2000 Sqft</span>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </main>
