--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
                 <!-- Featured item 2-->
                 <div class="item">
                     <a href="#!">
-                    <img src="./assets/img/feature2.jpg" alt="CouCou Homestead" class="thumb" />
-                </a>
+                        <img src="./assets/img/feature2.jpg" alt="CouCou Homestead" class="thumb" />
+                    </a>
 
                     <div class="body">
                         <h3 class="title"><a href="#!" class="line-clamp">CouCou Homestead</a></h3>
@@ -205,7 +205,8 @@
 
 
                     <div class="body">
-                        <h3 class="title"><a href="#!">Lavis 18 Residence</a><h3>
+                        <h3 class="title"><a href="#!">Lavis 18 Residence</a>
+                            <h3>
                                 <p class="desc">8502 Preston Rd. Inglewood, Maine 98280</p>
                                 <div class="info">
                                     <img src="./assets/img/symbol_bed.svg" alt="" class="icon" />
@@ -224,19 +225,39 @@
         </div>
 
         <!-- Stats -->
-         <div class="stats">
+        <div class="stats">
             <div class="content">
                 <div class="row">
                     <div class="img-block">
-                        <img src="./assets/img/stats-img.jpg" alt="You’ve found a neighborhood you love.">
+                        <img class="image" src="./assets/img/stats-img.jpg" alt="You’ve found a neighborhood you love.">
+
+
+                        <!-- Trend -->
+                        <div class="stats-trend">
+                            <div class="row">
+                                <strong class="value">40,000+</strong>
+                                <img src="./assets/img/arrow-trend-up.png" alt="" class="icon">
+                            </div>
+                            <p class="desc">By avarage for 2 bedroom apments in San Francisco, CA</p>
+                            <div class="separate"></div>
+                        </div>
+
+
+
+
+
                     </div>
                     <div class="info">
                         <h2 class="sub-title">You’ve found a neighborhood you love.</h2>
-                        <p class="desc">When you own a home, you’re committing to living in one location for a while. In a recent Trulia survey, we found that five out of six respondents said finding the right neighborhood </p>
+                        <p class="desc">When you own a home, you’re committing to living in one location for a while. In
+                            a recent Trulia survey, we found that five out of six respondents said finding the right
+                            neighborhood </p>
                     </div>
+
+
                 </div>
             </div>
-         </div>
+        </div>
 
 
 
