--- a/index.html
+++ b/index.html
@@ -240,12 +240,50 @@
                             </div>
                             <p class="desc">By avarage for 2 bedroom apments in San Francisco, CA</p>
                             <div class="separate"></div>
+                            <div class="avatarblock">
+                                <div class="avatar-group">
+                                    <img src="./assets/img/avatar (1).jpg" alt="" class="avatar">
+                                    <img src="./assets/img/avatar (2).jpg" alt="" class="avatar">
+                                </div>
+                          
+                                <div class="avatar-group">
+                                    <img src="./assets/img/avatar (1).jpg" alt="" class="avatar">
+                                    <img src="./assets/img/avatar (2).jpg" alt="" class="avatar">
+                                    <img src="./assets/img/avatar (3).jpg" alt="" class="avatar">
+                                    <div class="avatar avatar-1">S</div>
+                                </div>
+
+                                <div class="avatar-group">
+                                    <img src="./assets/img/avatar (1).jpg" alt="" class="avatar">
+                                    <img src="./assets/img/avatar (2).jpg" alt="" class="avatar">
+                                    <img src="./assets/img/avatar (3).jpg" alt="" class="avatar">
+                                </div>
+
+                                <div class="avatar-group">
+                                    <img src="./assets/img/avatar (6).jpg" alt="" class="avatar">
+                                    <img src="./assets/img/avatar (2).jpg" alt="" class="avatar">
+                                    <img src="./assets/img/avatar (3).jpg" alt="" class="avatar">
+                                    <img src="./assets/img/avatar (4).jpg" alt="" class="avatar">
+
+                                </div>
+
+                                <div class="avatar-group">
+                                    <img src="./assets/img/avatar (6).jpg" alt="" class="avatar">
+                                    <img src="./assets/img/avatar (5).jpg" alt="" class="avatar">
+                                </div>
+
+                                <div class="avatar-group">
+                                    <img src="./assets/img/avatar (3).jpg" alt="" class="avatar">
+                                    <img src="./assets/img/avatar (5).jpg" alt="" class="avatar">
+                                </div>
+
+
+                                <div class="avatar-group">
+                                    <img src="./assets/img/avatar (4).jpg" alt="" class="avatar">
+                                    <img src="./assets/img/avatar (2).jpg" alt="" class="avatar">
+                                </div>
+                            </div>
                         </div>
-
-
-
-
-
                     </div>
                     <div class="info">
                         <h2 class="sub-title">You’ve found a neighborhood you love.</h2>
