--- a/index.html
+++ b/index.html
@@ -5,13 +5,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>F8 Project 1</title>
+
+    <!-- Reset CSS -->
     <link rel="stylesheet" href="./assets/css/reset.css" />
+
+    <!-- Embeded fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+
+
     <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
+
+    <!-- Styles -->
     <link rel="stylesheet" href="./assets/css/styles.css" />
 </head>
 
 <body>
-    <main style="height: 10000px">
+    <main>
         <!-- Header -->
         <header class="header">
             <div class="content">
@@ -245,7 +256,7 @@
                                     <img src="./assets/img/avatar (1).jpg" alt="" class="avatar">
                                     <img src="./assets/img/avatar (2).jpg" alt="" class="avatar">
                                 </div>
-                          
+
                                 <div class="avatar-group">
                                     <img src="./assets/img/avatar (1).jpg" alt="" class="avatar">
                                     <img src="./assets/img/avatar (2).jpg" alt="" class="avatar">
@@ -296,7 +307,7 @@
         </div>
 
         <!-- Subscription -->
-         <div class="subscription">
+        <div class="subscription">
             <div class="content">
                 <div class="body">
                     <div class="info">
@@ -309,8 +320,93 @@
                     <img src="./assets/img/newletter.svg" alt="Subscribe to our Newsletter!" class="image">
                 </div>
             </div>
-         </div>
+        </div>
 
+        <!-- Footer -->
+        <footer class="footer">
+            <div class="content">
+                <div class="row row-top">
+                    <!-- Product column -->
+                    <div class="column">
+                        <h3 class="heading">Product</h3>
+                        <ul class="list">
+                            <li class="item">
+                                <a href="">Listing</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Property</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Agents</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Blog</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <!-- Resouces column -->
+                    <div class="column">
+                        <h3 class="heading">Resources</h3>
+                        <ul class="list">
+                            <li class="item">
+                                <a href="">Our Homes</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Member Stories</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Video</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Free trial</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <!-- Company column -->
+                    <div class="column">
+                        <h3 class="heading">Company</h3>
+                        <ul class="list">
+                            <li class="item">
+                                <a href="">Patnerships</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Terms of use</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Privacy</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Sitemap</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <!-- Get in touch column -->
+                    <div class="column">
+                        <h3 class="heading">Get in touch</h3>
+                        <p class="desc">You’ll find your next home, in any style you prefer.</p>
+                        <div class="social">
+                            <a href="" class="social-link">
+                                <img src="./assets/img/fb.svg" alt="">
+                            </a>
+                            <a href="" class="social-link">
+                                <img src="./assets/img/twitter.svg" alt="">
+                            </a>
+                            <a href="" class="social-link">
+                                <img src="./assets/img/linkedin.svg" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row row-bottom">
+                    <img src="./assets/img/logo.svg" alt="Besnik" class="logo">
+                    <p class="copyright">Copyright 2020.com, All rights reserved.</p>
+                </div>
+            </div>
+        </footer>
 
     </main>
 </body>
