--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
 <body>
     <main>
-        <!-- Header -->
-        <header class="header">
+
+        <header class="fixed-header">
             <div class="content">
                 <nav class="navbar">
                     <!-- Logo -->
@@ -45,7 +45,11 @@
                         <a href="#!" class="btn action-btn">Sign up</a>
                     </div>
                 </nav>
-
+            </div>
+        </header>
+        <!-- Hero -->
+        <div class="hero-wrap">
+            <div class="content">
                 <div class="hero">
                     <div class="info">
                         <p class="sub-title">Welcome to Besnik Agency</p>
@@ -60,11 +64,10 @@
                         <!-- Call to action -->
                         <a href="#!" class="btn hero-cta">More About Us</a>
                     </div>
-
                     <img src="./assets/img/hero.svg" alt="Discover a place you'll love to live." class="hero-img" />
                 </div>
             </div>
-        </header>
+        </div>
 
         <!-- Clients -->
         <div class="clients">
