--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>F8 Project 1</title>
 
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="57x57" href="./assets/favicon
+    /b-logo.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="./assets/favicon
+    /b-logo.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./assets/favicon
+b-logo.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/b-logo.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="./assets/favicon/b-logo.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="./assets/favicon/b-logo.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="./assets/favicon/b-logo.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./assets/favicon/b-logo.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/b-logo.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="./assets/favicon/b-logo.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/b-logo.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./assets/favicon/b-logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/b-logo.png">
+    <link rel="manifest" href="./assets/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="./assets/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
     <!-- Reset CSS -->
     <link rel="stylesheet" href="./assets/css/reset.css" />
 
@@ -22,52 +44,52 @@
 </head>
 
 <body>
+
+    <header class="fixed-header">
+        <div class="content">
+            <nav class="navbar">
+                <!-- Logo -->
+                <a href="#">
+                    <img src="./assets/img/logo.svg" alt="Besnik." />
+                </a>
+
+                <!-- Navigation -->
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#features">Features</a></li>
+
+                    <li><a href="#resources">Resources</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+
+                <!-- Action -->
+                <div class="actions">
+                    <a href="#!" class="action-link">Sign in</a>
+                    <a href="#!" class="btn action-btn">Sign up</a>
+                </div>
+            </nav>
+        </div>
+    </header>
+
     <main>
-
-        <header class="fixed-header">
-            <div class="content">
-                <nav class="navbar">
-                    <!-- Logo -->
-                    <a href="#"> 
-                        <img src="./assets/img/logo.svg" alt="Besnik." />
-                    </a>
-
-                    <!-- Navigation -->
-                    <ul>
-                        <li><a href="#!">Home</a></li>
-                        <li><a href="#!">Features</a></li>
-                        <li><a href="#!">Services</a></li>
-                        <li><a href="#!">Resources</a></li>
-                        <li><a href="#!">Contact</a></li>
-                    </ul>
-
-                    <!-- Action -->
-                    <div class="actions">
-                        <a href="#!" class="action-link">Sign in</a>
-                        <a href="#!" class="btn action-btn">Sign up</a>
-                    </div>
-                </nav>
-            </div>
-        </header>
         <!-- Hero -->
         <div class="hero-wrap">
             <div class="content">
-                <div class="hero">
-                    <div class="info">
-                        <p class="sub-title">Welcome to Besnik Agency</p>
-                        <h1 class="title">
-                            Discover a place you'll love to live.
-                        </h1>
-                        <p class="desc">
-                            Get the best real estate deals first, before
-                            they hit the mass market! HOT FORECLOSURE DEALS
-                            with one simple search.
-                        </p>
-                        <!-- Call to action -->
-                        <a href="#!" class="btn hero-cta">More About Us</a>
-                    </div>
-                    <img src="./assets/img/hero.svg" alt="Discover a place you'll love to live." class="hero-img" />
+                <div class="info">
+                    <p class="sub-title">Welcome to Besnik Agency</p>
+                    <h1 class="title">
+                        Discover a place you'll love to live.
+                    </h1>
+                    <p class="desc">
+                        Get the best real estate deals first, before
+                        they hit the mass market! HOT FORECLOSURE DEALS
+                        with one simple search.
+                    </p>
+                    <!-- Call to action -->
+                    <a href="#!" class="btn hero-cta">More About Us</a>
                 </div>
+                <img src="./assets/img/hero.svg" alt="Discover a place you'll love to live." class="hero-img" />
             </div>
         </div>
 
@@ -118,7 +140,7 @@
         </div>
 
         <!-- Guides -->
-        <div class="guides">
+        <div id="features" class="guides">
             <div class="content">
                 <h2 class="sub-title">How its works?</h2>
                 <p class="desc">
@@ -163,7 +185,7 @@
         </div>
 
         <!-- Feature -->
-        <div class="featured">
+        <div id="services" class="featured">
             <div class="content">
                 <header>
                     <h2 class="sub-title">Featured Properties</h2>
@@ -255,7 +277,7 @@
         </div>
 
         <!-- Stats -->
-        <div class="stats">
+        <div id="resources" class="stats">
             <div class="content">
                 <div class="row">
                     <div class="img-block">
@@ -326,7 +348,7 @@
         </div>
 
         <!-- Subscription -->
-        <div class="subscription">
+        <div id="contact" class="subscription">
             <div class="content">
                 <div class="body">
                     <div class="info">
@@ -340,94 +362,94 @@
                 </div>
             </div>
         </div>
+    </main>
 
-        <!-- Footer -->
-        <footer class="footer">
-            <div class="content">
-                <div class="row row-top">
-                    <!-- Product column -->
-                    <div class="column">
-                        <h3 class="heading">Product</h3>
-                        <ul class="list">
-                            <li class="item">
-                                <a href="">Listing</a>
-                            </li>
-                            <li class="item">
-                                <a href="">Property</a>
-                            </li>
-                            <li class="item">
-                                <a href="">Agents</a>
-                            </li>
-                            <li class="item">
-                                <a href="">Blog</a>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <!-- Resouces column -->
-                    <div class="column">
-                        <h3 class="heading">Resources</h3>
-                        <ul class="list">
-                            <li class="item">
-                                <a href="">Our Homes</a>
-                            </li>
-                            <li class="item">
-                                <a href="">Member Stories</a>
-                            </li>
-                            <li class="item">
-                                <a href="">Video</a>
-                            </li>
-                            <li class="item">
-                                <a href="">Free trial</a>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <!-- Company column -->
-                    <div class="column">
-                        <h3 class="heading">Company</h3>
-                        <ul class="list">
-                            <li class="item">
-                                <a href="">Patnerships</a>
-                            </li>
-                            <li class="item">
-                                <a href="">Terms of use</a>
-                            </li>
-                            <li class="item">
-                                <a href="">Privacy</a>
-                            </li>
-                            <li class="item">
-                                <a href="">Sitemap</a>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <!-- Get in touch column -->
-                    <div class="column">
-                        <h3 class="heading">Get in touch</h3>
-                        <p class="desc">You’ll find your next home, in any style you prefer.</p>
-                        <div class="social">
-                            <a href="" class="social-link">
-                                <img src="./assets/img/fb.svg" alt="">
-                            </a>
-                            <a href="" class="social-link">
-                                <img src="./assets/img/twitter.svg" alt="">
-                            </a>
-                            <a href="" class="social-link">
-                                <img src="./assets/img/linkedin.svg" alt="">
-                            </a>
-                        </div>
-                    </div>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="content">
+            <div class="row row-top">
+                <!-- Product column -->
+                <div class="column">
+                    <h3 class="heading">Product</h3>
+                    <ul class="list">
+                        <li class="item">
+                            <a href="">Listing</a>
+                        </li>
+                        <li class="item">
+                            <a href="">Property</a>
+                        </li>
+                        <li class="item">
+                            <a href="">Agents</a>
+                        </li>
+                        <li class="item">
+                            <a href="">Blog</a>
+                        </li>
+                    </ul>
                 </div>
 
-                <div class="row row-bottom">
-                    <img src="./assets/img/logo.svg" alt="Besnik" class="logo">
-                    <p class="copyright">Copyright 2020.com, All rights reserved.</p>
+                <!-- Resouces column -->
+                <div class="column">
+                    <h3 class="heading">Resources</h3>
+                    <ul class="list">
+                        <li class="item">
+                            <a href="">Our Homes</a>
+                        </li>
+                        <li class="item">
+                            <a href="">Member Stories</a>
+                        </li>
+                        <li class="item">
+                            <a href="">Video</a>
+                        </li>
+                        <li class="item">
+                            <a href="">Free trial</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- Company column -->
+                <div class="column">
+                    <h3 class="heading">Company</h3>
+                    <ul class="list">
+                        <li class="item">
+                            <a href="">Patnerships</a>
+                        </li>
+                        <li class="item">
+                            <a href="">Terms of use</a>
+                        </li>
+                        <li class="item">
+                            <a href="">Privacy</a>
+                        </li>
+                        <li class="item">
+                            <a href="">Sitemap</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- Get in touch column -->
+                <div class="column">
+                    <h3 class="heading">Get in touch</h3>
+                    <p class="desc">You’ll find your next home, in any style you prefer.</p>
+                    <div class="social">
+                        <a href="" class="social-link">
+                            <img src="./assets/img/fb.svg" alt="">
+                        </a>
+                        <a href="" class="social-link">
+                            <img src="./assets/img/twitter.svg" alt="">
+                        </a>
+                        <a href="" class="social-link">
+                            <img src="./assets/img/linkedin.svg" alt="">
+                        </a>
+                    </div>
                 </div>
             </div>
-        </footer>
 
-    </main>
+            <div class="row row-bottom">
+                <img src="./assets/img/logo.svg" alt="Besnik" class="logo">
+                <p class="copyright">Copyright 2020.com, All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
